<resources>
    <string name="app_name">LiteApp</string>
    <string name="PREF_XML_KEY_BLOCK_MALWARE">PREF_XML_KEY_BLOCK_MALWARE</string>
    <string name="PREF_XML_KEY_BLOCK_POPUPS">PREF_XML_KEY_BLOCK_POPUPS</string>
    <string name="PREF_XML_KEY_BLOCK_THIRD_PARTY_COOKIES">PREF_XML_KEY_BLOCK_THIRD_PARTY_COOKIES</string>
    <string name="PREF_XML_KEY_CAMERA_MIC_PERMISSION">PREF_XML_KEY_CAMERA_MICROPHONE_PERMISSION</string>
    <string name="PREF_XML_KEY_CATEGORY_ABOUT">PREF_XML_KEY_CATEGORY_ABOUT</string>
    <string name="PREF_XML_KEY_CATEGORY_BACKUP_AND_SYNC">PREF_XML_KEY_CATEGORY_BACKUP_AND_SYNC</string>
    <string name="PREF_XML_KEY_CATEGORY_PREMIUM_EXCLUSIVE">PREF_XML_KEY_CATEGORY_PREMIUM_EXCLUSIVE</string>
    <string name="PREF_XML_KEY_CREATE_HOME_SCREEN_ICONS">CREATE_HOME_SCREEN_ICONS</string>
    <string name="PREF_XML_KEY_DO_NOT_TRACK">PREF_XML_KEY_DO_NOT_TRACK</string>
    <string name="PREF_XML_KEY_FILES_PERMISSION">PREF_XML_KEY_FILES_PERMISSION</string>
    <string name="PREF_XML_KEY_FRAMELESS">PREF_XML_KEY_FRAMELESS</string>
    <string name="PREF_XML_KEY_HELP_MENU_ITEM">HELP_MENU_ITEM</string>
    <string name="PREF_XML_KEY_INVITE_FRIENDS_MENU_ITEM">INVITE_FRIENDS_MENU_ITEM</string>
    <string name="PREF_XML_KEY_JAVASCRIPT">PREF_XML_KEY_JAVASCRIPT</string>
    <string name="PREF_XML_KEY_LOAD_IMAGES">PREF_XML_KEY_LOAD_IMAGES</string>
    <string name="PREF_XML_KEY_LOCATION_PERMISSION">PREF_XML_KEY_LOCATION_PERMISSION</string>
    <string name="PREF_XML_KEY_NIGHT_MODE">PREF_XML_KEY_NIGHT_MODE</string>
    <string name="PREF_XML_KEY_NIGHT_MODE_PAGE_STYLE">PREF_XML_KEY_NIGHT_MODE_PAGE_STYLE</string>
    <string name="PREF_XML_KEY_OPEN_LINKS_IN_APP">PREF_XML_KEY_OPEN_LINKS_IN_APP</string>
    <string name="PREF_XML_KEY_ORIENTATION">PREF_XML_KEY_ORIENTATION</string>
    <string name="PREF_XML_KEY_PULL_TO_REFRESH">PREF_XML_KEY_PULL_TO_REFRESH</string>
    <string name="PREF_XML_KEY_READER_VIEW_PROMO">reader_view_promo</string>
    <string name="PREF_XML_KEY_REQUEST_DESKTOP_SITE">PREF_XML_KEY_REQUEST_DESKTOP_SITE</string>
    <string name="PREF_XML_KEY_SAVE_DATA_HTTP_HEADER">PREF_XML_KEY_SAVE_DATA_HTTP_HEADER</string>
    <string name="PREF_XML_KEY_SCROLL_TO_TOP">PREF_XML_KEY_SCROLL_TO_TOP</string>
    <string name="PREF_XML_KEY_SENT_VIA_HERMIT_MENU_ITEM">SENT_VIA_HERMIT_MENU_ITEM</string>
    <string name="PREF_XML_KEY_SOCIAL_MEDIA_MENU_ITEM">SOCIAL_MEDIA_MENU_ITEM</string>
    <string name="PREF_XML_KEY_START_FULL_SCREEN">PREF_XML_KEY_START_FULL_SCREEN</string>
    <string name="SSL_DATE_INVALID">The date of the certificate is invalid</string>
    <string name="SSL_EXPIRED">The certificate has expired</string>
    <string name="SSL_IDMISMATCH">Hostname mismatch</string>
    <string name="SSL_INVALID">A generic error occurred</string>
    <string name="SSL_NOTYETVALID">The certificate is not yet valid</string>
    <string name="SSL_UNTRUSTED">The certificate authority is not trusted</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="add_bookmark">Bookmark</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
    <string name="allow">Allow</string>
    <string name="allow_audio_and_video_capture">Allow “%1$s” to use your camera and microphone?</string>
    <string name="allow_audio_capture">Allow “%1$s” to use your microphone?</string>
    <string name="allow_files_permission">Allow “%1$s” to access the photos, videos, and files you select?</string>
    <string name="allow_location_permission">Allow “%1$s” to access your location?</string>
    <string name="allow_video_capture">Allow “%1$s” to use your camera?</string>
    <string name="app_name_full">Hermit • Lite Apps Browser</string>
    <string name="app_update_available">App update available!</string>
    <string name="app_version">13.3.20</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_credentials_dialog_message">The server “%1$s” requires a username and password. The server says “%2$s”.</string>
    <string name="authentication_required">Authentication required</string>
    <string name="back_to_lite_app">Back to %1$s</string>
    <string name="backup_and_sync">Backup and Sync</string>
    <string name="backup_lite_apps">Backup Lite Apps to device</string>
    <string name="behavior">Behavior</string>
    <string name="beta">Beta</string>
    <string name="beta_warning">You have chosen to run a Beta version of Hermit which may be unstable or contain bugs. You can revert to a stable version at any time.</string>
    <string name="block_malware">Block Ads &amp; Malware</string>
    <string name="block_popups">Block Popups</string>
    <string name="block_third_party_cookies">Block Third-Party Cookies</string>
    <string name="bookmark_warning_same_as_shortcut">You are about to create a bookmark pointing to the same location as the Lite App itself. Is this what you want?</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_zero_state">Bookmark your frequently visited pages. Keep your favorite stuff on top.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browser">Browser</string>
    <string name="camera_microphone_permission">Camera and microphone</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="change">Change</string>
    <string name="change_url">Change URL</string>
    <string name="character_counter_content_description">%1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clean_up">Clean up Lite Apps</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="clear_cookies_dialog_message">This will log you out of all Lite Apps.</string>
    <string name="clear_cookies_dialog_title">Clear cookies?</string>
    <string name="cleared_cache">Cleared cache for all Lite Apps</string>
    <string name="cleared_cookies">Cleared cookies for all Lite Apps</string>
    <string name="close">Close</string>
    <string name="close_all_lite_apps">Close Lite Apps</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_delete">Remove “%1$s”?</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="content">Content</string>
    <string name="continue_free">Continue Free</string>
    <string name="copied_to_clipboard">Copied “%1$s”</string>
    <string name="copy">Copy</string>
    <string name="copy_url">Copy URL</string>
    <string name="create">Create</string>
    <string name="create_lite_app">Create a Lite App</string>
    <string name="customize">Customize</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="invite_friends">Invite friends</string>
    <string name="lite_apps">Lite Apps</string>
    <string name="social_media">Follow ​@HermitApp</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
</resources>