<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_beta_badge"
        android:orderInCategory="11"
        android:title="@string/beta"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_get_premium"
        android:icon="@drawable/ic_crown_white"
        android:orderInCategory="12"
        android:title="@string/upgrade_to_premium"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_help_integrations"
        android:icon="@drawable/ic_help_circle_white_24dp"
        android:orderInCategory="13"
        android:title="@string/help"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_checkbox_marked_circle_white_24dp"
        android:orderInCategory="14"
        android:title="@string/done"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_quick_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="15"
        android:title="@string/customize"
        app:showAsAction="ifRoom" />
</menu>