<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/lite_app_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/lite_app_toolbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_dark"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ToolbarPopupTheme" />

            <!--<com.chimbori.hermitcrab.widgets.SearchQueryEditor
                android:id="@id/lite_app_site_search_query_editor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:visibility="gone"
                app:cardBackgroundColor="@color/cardview_dark_background" />-->

            <FrameLayout
                android:id="@+id/lite_app_web_container"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:visibility="visible" />

            <!--<com.chimbori.reader.ReaderView
                android:id="@id/lite_app_reader"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:visibility="gone" />-->

            <!--  -->
            <FrameLayout
                android:id="@+id/lite_app_customization_container"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:visibility="gone" />

            <!--<com.chimbori.hermitcrab.web.RatingRequestView
                android:id="@id/lite_app_rating_request_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />-->
        </LinearLayout>

        <ViewStub
            android:id="@+id/lite_app_quick_settings_stub"
            android:layout_width="@dimen/quick_settings_width"
            android:layout_height="fill_parent"
            android:layout_gravity="end"
            android:layout="@layout/view_quick_settings_lite_app" />

        <android.support.design.widget.NavigationView
            android:id="@+id/lite_app_navigation"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/navigation_menu_padding_bottom"
            app:headerLayout="@layout/drawer_lite_app_header"
            app:menu="@menu/menu_drawer_lite_app">

            <!-- 抽屉 最底下 的 工具栏 -->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/navigation_menu_padding_bottom_negative">

                <View
                    android:id="@+id/lite_app_drawer_top_shadow"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/padding_half"
                    android:layout_marginBottom="@dimen/padding_half"
                    android:background="@drawable/gradient_top_shadow"
                    app:layout_constraintBottom_toTopOf="@id/lite_app_navigation_close_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- close -->
                <TextView
                    android:id="@+id/lite_app_navigation_close_button"
                    style="@style/QuickSettingsButton"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_half"
                    android:layout_marginTop="@dimen/padding_standard"
                    android:layout_marginBottom="@dimen/padding_standard"
                    android:drawableTop="@drawable/ic_close_grey600_24dp"
                    android:text="@string/close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/lite_app_navigation_customize_button"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- customize -->
                <TextView
                    android:id="@+id/lite_app_navigation_customize_button"
                    style="@style/QuickSettingsButton"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_standard"
                    android:layout_marginBottom="@dimen/padding_standard"
                    android:drawableTop="@drawable/ic_settings_grey600_24dp"
                    android:text="@string/customize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/lite_app_navigation_lite_apps_button"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@id/lite_app_navigation_close_button" />

                <!-- lite_apps -->
                <TextView
                    android:id="@+id/lite_app_navigation_lite_apps_button"
                    style="@style/QuickSettingsButton"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_standard"
                    android:layout_marginEnd="@dimen/padding_half"
                    android:layout_marginBottom="@dimen/padding_standard"
                    android:drawableTop="@drawable/ic_apps_grey600_24dp"
                    android:text="@string/lite_apps"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@id/lite_app_navigation_customize_button" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
</android.support.design.widget.CoordinatorLayout>